--- a/public/about/index.html
+++ b/public/about/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<head><script src="/blog.v3loz1ty/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=blog.v3loz1ty/livereload" data-no-instant defer></script>
+<head>
   <link rel="preload" href="/blog.v3loz1ty/lib/font-awesome/webfonts/fa-brands-400.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   <link rel="preload" href="/blog.v3loz1ty/lib/font-awesome/webfonts/fa-regular-400.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   <link rel="preload" href="/blog.v3loz1ty/lib/font-awesome/webfonts/fa-solid-900.woff2" as="font" type="font/woff2" crossorigin="anonymous">
@@ -9,12 +9,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title> About | Velocity Blog</title>
-  <link rel = 'canonical' href = 'http://localhost:1313/blog.v3loz1ty/about/'>
+  <link rel = 'canonical' href = 'https://yashwanth164.github.io/blog.v3loz1ty/about/'>
   <meta name="description" content="This blog site focuses on application security, secure development, and client-side security. Explore best practices, insights on securing web applications, preventing client-side attacks, and building secure software solutions. In addition to these, you will find blogs related to genereal cybersecurity concepts.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="all,follow">
   <meta name="googlebot" content="index,follow,snippet,archive">
-  <meta property="og:url" content="http://localhost:1313/blog.v3loz1ty/about/">
+  <meta property="og:url" content="https://yashwanth164.github.io/blog.v3loz1ty/about/">
   <meta property="og:site_name" content="Velocity Blog">
   <meta property="og:title" content="About">
   <meta property="og:description" content="There are so many inspirations for starting this blog. Thanks to all of them!
@@ -35,10 +35,10 @@ I am Yashwanth Krishna Kasiralla, and I am currently a master’s student at Uni
     
   
   
-  <link rel="stylesheet" href="http://localhost:1313/blog.v3loz1ty/css/styles.c05d68261bf086a9d7713c4f8a6215a3601608e267a816a7ee58f139b3d1aae51222aae2081c8e0c6bd35e1334773b7a16283022f31f92afd93bb37e5e822e66.css" integrity="sha512-wF1oJhvwhqnXcTxPimIVo2AWCOJnqBan7ljxObPRquUSIqriCByODGvTXhM0dzt6FigwIvMfkq/ZO7N&#43;XoIuZg=="> 
+  <link rel="stylesheet" href="https://yashwanth164.github.io/blog.v3loz1ty/css/styles.c05d68261bf086a9d7713c4f8a6215a3601608e267a816a7ee58f139b3d1aae51222aae2081c8e0c6bd35e1334773b7a16283022f31f92afd93bb37e5e822e66.css" integrity="sha512-wF1oJhvwhqnXcTxPimIVo2AWCOJnqBan7ljxObPRquUSIqriCByODGvTXhM0dzt6FigwIvMfkq/ZO7N&#43;XoIuZg=="> 
 
   
-   <link rel="stylesheet" href="http://localhost:1313/css/custom.css"> 
+   <link rel="stylesheet" href="https://yashwanth164.github.io/css/custom.css"> 
   
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -47,7 +47,7 @@ I am Yashwanth Krishna Kasiralla, and I am currently a master’s student at Uni
   
 
   
-<link rel="icon" type="image/png" href="http://localhost:1313/blog.v3loz1ty/images/favicon.ico" />
+<link rel="icon" type="image/png" href="https://yashwanth164.github.io/blog.v3loz1ty/images/favicon.ico" />
 
   
   
@@ -56,9 +56,9 @@ I am Yashwanth Krishna Kasiralla, and I am currently a master’s student at Uni
   <div class="content index py4">
 
     <header id="header">
-  <a href="http://localhost:1313/blog.v3loz1ty/">
+  <a href="https://yashwanth164.github.io/blog.v3loz1ty/">
   
-    <div id="logo" style="background-image: url(http://localhost:1313/blog.v3loz1ty/images/logo.png)"></div>
+    <div id="logo" style="background-image: url(https://yashwanth164.github.io/blog.v3loz1ty/images/logo.png)"></div>
   
   <div id="title">
     <h1>Velocity Blog</h1>
